--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^8.0.2",
+    "@mantine/hooks": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
+    "googleapis": "^118.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1",
-    "web-vitals": "^2.1.4",
-    "aws-sdk": "^2.1338.0",
-    "googleapis": "^118.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,4 +45,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
