--- a/backend/package.json
+++ b/backend/package.json
@@ -9,23 +9,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@azure/arm-compute": "^19.0.0",
+    "@azure/arm-containerservice": "^16.0.0",
+    "@azure/arm-monitor": "^6.0.0",
+    "@azure/arm-resources": "^5.2.0",
+    "@azure/identity": "^3.1.3",
+    "aws-sdk": "^2.1338.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
     "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
     "pg-copy-streams": "^6.0.5",
     "python-shell": "^5.0.0",
     "socket.io": "^4.7.2",
-    "winston": "^3.10.0",
-    "aws-sdk": "^2.1338.0",
-    "googleapis": "^118.0.0",
-    "@azure/identity": "^3.1.3",
-    "@azure/arm-compute": "^19.0.0",
-    "@azure/arm-containerservice": "^16.0.0",
-    "@azure/arm-resources": "^5.2.0",
-    "@azure/arm-monitor": "^6.0.0"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
