--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
-    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.13",
     "googleapis": "^118.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
