--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,30 @@
 {
   "name": "realtime-load-predictions-backend",
   "version": "1.0.0",
-  "description": "Backend for realtime load prediction visualization",
+  "description": "Backend service for real-time load predictions and cloud scaling",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
-    "@azure/arm-compute": "^19.0.0",
+    "@aws-sdk/client-auto-scaling": "^3.481.0",
+    "@aws-sdk/client-ec2": "^3.481.0",
+    "@aws-sdk/client-eks": "^3.481.0",
+    "@aws-sdk/config-resolver": "^3.374.0",
+    "@aws-sdk/credential-provider-node": "^3.481.0",
+    "@azure/arm-compute": "^20.0.0",
     "@azure/arm-containerservice": "^16.0.0",
     "@azure/arm-monitor": "^6.0.0",
     "@azure/arm-resources": "^5.2.0",
-    "@azure/identity": "^3.1.3",
-    "aws-sdk": "^2.1338.0",
+    "@azure/identity": "^3.3.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.0.3",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^118.0.0",
+    "googleapis": "^126.0.1",
     "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
     "pg-copy-streams": "^6.0.5",
@@ -30,5 +34,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
