--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=http://localhost:3000/api/data
+REACT_APP_CLOUD_API_URL=http://localhost:3000/api/cloud
 REACT_APP_SOCKET_URL=http://localhost:3000
