feat: delete gcp and azure, add aws_accounts table, use IAM Role and STS to auth aws

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,6 @@ DB_PASSWORD=your_password
 # Python script path
 PYTHON_SCRIPT_PATH=../ml_engine/prediction/xgb.py
 DATA_PATH=../ml_engine/processed_data/
+
+# AWS encryption key
+ENCRYPTION_KEY=your_encryption_key
