--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,4 +13,7 @@ PYTHON_SCRIPT_PATH=../ml_engine/prediction/xgb.py
 DATA_PATH=../ml_engine/processed_data/
 
 # AWS encryption key
-ENCRYPTION_KEY=your_encryption_key
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_DEFAULT_REGION=us-east-1
+AWS_ENDPOINT=http://localhost:4566
